fixed nav bar overlap

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
 header {
-  height: 600px;
+  margin-top: 120px;
+  height: 500px;
   width: 100%;
   position: relative;
   text-align: center;
